--- a/swagger-ui-dist/index.html
+++ b/swagger-ui-dist/index.html
@@ -11,9 +11,27 @@
   </head>
 
   <body>
-    <div id="swagger-ui"></div>
     <script src="./swagger-ui-bundle.js" charset="UTF-8"> </script>
+    <div id="swagger-ui"></div>
+    <script>
+      window.onload = function() {
+        window.ui = SwaggerUIBundle({
+          url: "https://petstore.swagger.io/v2/swagger.json",
+          dom_id: '#swagger-ui',
+          deepLinking: true,
+          presets: [
+            SwaggerUIBundle.presets.apis,
+            SwaggerUIStandalonePreset
+          ],
+          plugins: [
+            SwaggerUIBundle.plugins.DownloadUrl
+          ],
+          layout: "StandaloneLayout"
+        });
+
+      };
+    </script>
+    
     <script src="./swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
-    <script src="./swagger-initializer.js" charset="UTF-8"> </script>
   </body>
 </html>
