--- a/swagger-ui-dist/index.html
+++ b/swagger-ui-dist/index.html
@@ -11,7 +11,8 @@
   </head>
 
   <body>
-    <script src="./swagger-ui-bundle.js" charset="UTF-8"> </script>
+    <script src="./swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/5.4.2/swagger-ui-bundle.js" integrity="sha512-l5/LYUvqCJKr9NblefbJPkYEpD3yUiOOXiLUKlibcIbVynsY3UopPYBr0xisoV8By8MulIth7yTLc+KOVt6YeQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <div id="swagger-ui"></div>
     <script>
       window.onload = function() {
@@ -32,6 +33,6 @@
       };
     </script>
     
-    <script src="./swagger-ui-standalone-preset.js" charset="UTF-8"> </script>
+   
   </body>
 </html>
